# aoe2-tournament-bot

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  MIGRATION.md  Makefile  README.md  bot.py  config.example.toml  create-token.py  requirements-dev.txt  requirements.txt  test_bot.py  tournaments.toml
.github/workflows/: ci.yml
src/: config.rs  entry.rs  gcs.rs  handler.rs  main.rs  notify.rs  parse.rs  retry.rs  sheets.rs  tournament.rs
terraform/: README.md  artifact_registry.tf  backend.tf  iam.tf  main.tf  outputs.tf  secret.tf  versions.tf  worker_pool.tf
