[package]
name = "aoe2-tournament-bot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Discord bot that captures AoE2 tournament results into a Google Sheet and replays into GCS"

[dependencies]
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
figment = { version = "0.10", features = ["toml", "env"] }
google-cloud-storage = { version = "0.24", default-features = false, features = ["rustls-tls", "auth"] }
google-sheets4 = "6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
toml = "0.8"

[profile.release]
lto = "thin"
strip = true
