[package]
name = "aoe2-tournament-bot"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Discord bot that captures AoE2 tournament results into a Google Sheet and replays into GCS"

[dependencies]
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
figment = { version = "0.10", features = ["toml", "env"] }
# Renamed `google-cloud-storage` (Yoshidan), same API. `jwt-rust-crypto`
# = pure-Rust JWT backend, keeps the build free of aws-lc/cmake.
gcloud-storage = { version = "1.3.0", default-features = false, features = ["rustls-tls", "auth", "jwt-rust-crypto"] }
google-sheets4 = { version = "7", features = ["yup-oauth2-service-account"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Not used directly; keep it. Feature-unifies `hyper-rustls` onto the
# yup-oauth2 google-sheets4 pulls, else its ADC `builder()` is cfg'd out.
yup-oauth2 = { version = "12", default-features = false, features = ["hyper-rustls", "service-account"] }

[dev-dependencies]
pretty_assertions = "1"
toml = "1"

[profile.release]
lto = "thin"
strip = true
